# rbinr2

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
crates/rbm-core/: Cargo.toml
crates/rbm-core/src/: config.rs  env.rs  error.rs  lib.rs  output_guard.rs  paths.rs  types.rs  util.rs
crates/rbm-core/tests/: config.rs  error.rs  output_guard.rs  paths.rs  util.rs
crates/rbm-r2/: Cargo.toml
crates/rbm-r2/src/: analyze.rs  artifact_summary.rs  cmd.rs  disasm.rs  field_xrefs.rs  filters.rs  format.rs  func_profile.rs  jump_table.rs  lib.rs  meta.rs  navigation.rs  path_digest.rs  search.rs  security.rs  session.rs  symbols.rs  trace.rs  types.rs  windows_driver.rs
crates/rbm-server/: Cargo.toml
crates/rbm-server/src/: lib.rs  main.rs  server.rs  support.rs
