[package]
name = "rbm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, errors, and utilities for rbinr2 crates"
publish = false
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
